Fixed videos being stretched out of proportion in gallery

--- a/client/src/app/components/gallery/gallery.component.scss
+++ b/client/src/app/components/gallery/gallery.component.scss
@@ -25,6 +25,10 @@ app-preview {
   }
 }
 
+.card-body {
+  flex: initial !important;
+}
+
 .card-header > strong {
   display: block;
   max-width: 370px;
